--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,43 @@
-.box {
-    background-color: beige;
-    border: 3px solid lightgray;
+.boxes {
+    border: 100px;
+    position: relative;
+    width: 500px;
+    height: 500px;
+  
+
+    
 }
-.text {
-    /* trbl top right bottom left */
-    padding: 0;
-    margin: 20px;
-    border: 3px solid red;
-    padding: 5px;
-    }
+.box {
+    width: 100px;
+    height: 100px;
+    position: absolute; 
+    border-radius: 50px;
+    background-color: white;
+    
+}
+.box-one {
+    border: 2px black solid;
+    top: 50px;
+    left: 75px;
+  
+    
+}
+.box-two {
+    border: 2px blue solid;
+    left: 125px;
+    z-index: -1;
+    
+}
+.box-three {
+border: 2px green solid ;
+z-index: -1;
+}
+.box-four {
+    border: 2px rgb(244, 166, 23) solid;
+    left: 250px;
+}
+.box-five {
+    border: 2px rgb(213, 174, 48) solid;
+    top:50px;
+    left: 200px;
+}
