--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,12 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+html {
+    font-size: 62.5%;
 }
-.cell {
-    width: 70px;
-    height: 70px;
-    border: 1px solid lightgray ;
-    background-color: bisque;
+
+.box {
+    border: 3px solid orange;
+    /* 1 em = 16px */
+    font-size: 3rem;
+    width: 16em;
+    height: 16em;
     box-sizing: border-box;
-}
-.chessBoard {
-    display: flex;
-    flex-direction: column;
-}
-.row {
-    display: flex;
-    flex-direction: row;
-}
-.chessBoard div:nth-child(odd)>div:nth-child(odd) {
-    background-color: black;
-}
-.chessBoard div:nth-child(even)>div:nth-child(even) {
-    background-color: black;
 }
