--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,20 @@
 html {
     font-size: 62.5%;
 }
+.gallery--item {
+    border: 4px solid lightgray;
+    border-radius: 40px;
+    width: 20rem;
 
-.box {
-    border: 3px solid orange;
-    /* 1 em = 16px */
-    font-size: 3rem;
-    width: 16em;
-    height: 16em;
-    box-sizing: border-box;
-    /* *************  */
-   /* overflow part is hidden */
-    overflow: hidden;
-    /* ************* */
-    /* scrolling if there is overflow */
-    overflow: auto;
+}
+.gallery--item_title {
+display: block;
+font-size: 2rem;
+width: 20rem;
+background-color: blue;
+text-align: center;
+color: aliceblue;
+}
+.gallery {
+    list-style: none;
 }
