--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,29 @@
 html {
     font-size: 62.5%;
 }
+.body {
+    text-align: center;
+}
 .gallery--item {
     border: 4px solid lightgray;
-    display: inline-block;
     border-radius: 40px;
-    box-sizing: border-box;
     width: 20rem;
     overflow: hidden;
+    display: inline-block;
+    font-size: 0;
 }
 .gallery--item_title {
 display: block; 
-margin: -3px; 
 font-size: 2rem;
 width: 20rem;
 background-color: blue;
 text-align: center;
-color: aliceblue;}
+color: aliceblue;
+}
 .gallery {
     list-style: none;
+    margin-top: 20vh;
+}
+.gallery--item_image {
+    /* display: block; */
 }
